--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,15 @@
 *.out
 *.app
 
-
 # visual studio
 C++_final/Debug/
 C++_final/C++_final.vcxproj
 C++_final/C++_final.vcxproj.filters
 C++_final/C++_final.vcxproj.user
 C++_final/packages.config
+
+# Clion
+/cmake-build-debug/
+CmakeLists.txt
+/.idea/
+/allegro5/
