--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ C++_final/C++_final.vcxproj
 C++_final/C++_final.vcxproj.filters
 C++_final/C++_final.vcxproj.user
 C++_final/packages.config
+.vs/
+.vscode/
+Debug/
+packages/
+C++_final.sln
 
 # Clion
 /cmake-build-debug/
