--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@
 *.out
 *.app
 
+# log
+C++_final/allegro.log
+C++_final/log.txt
+
 # visual studio
 C++_final/Debug/
 C++_final/C++_final.vcxproj
