--- a/C++_final/resources/config.json
+++ b/C++_final/resources/config.json
@@ -16,6 +16,6 @@
     "text": {
         "font": "FOT-SkipStd-B.otf",
         "font-size": "Medium",
-        "local": "en_US"
+        "local": "zh_TW"
     }
 }
